--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>הכוכב הבא - מפוצץ נצנצים</title>
+    <title>The Next Star - Live Control</title>
     <style>
         body, html {
             margin: 0;
@@ -129,4 +129,5 @@
         });
     </script>
 </body>
+
 </html>
