--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             width: 100%;
             height: 100%;
             background-color: #000510;
-            background-image: radial-gradient(circle at center, #001a33 0%, #000510 100%);
+            /* רקע עמוק עם גרדיאנט שזז לאט */
+            background: radial-gradient(circle at center, #001a33 0%, #000510 100%);
             overflow: hidden;
             display: flex;
             justify-content: center;
@@ -20,25 +21,42 @@
             user-select: none;
         }
 
-        /* שכבת נצנצים מפוצצת כמו באולפן */
-        .glitter-layer {
+        /* שכבת הנצנצים הדינמית */
+        .stars-container {
             position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="150" height="150"><circle cx="10" cy="10" r="0.8" fill="%23ffd700" opacity="0.8"/><circle cx="50" cy="30" r="0.5" fill="%23ffffff" opacity="0.6"/><circle cx="100" cy="20" r="0.7" fill="%2300aaff" opacity="0.7"/><circle cx="30" cy="80" r="0.6" fill="%2300aaff" opacity="0.8"/><circle cx="80" cy="110" r="0.9" fill="%23ffd700" opacity="0.9"/><circle cx="130" cy="90" r="0.5" fill="%23ffffff" opacity="0.4"/><circle cx="40" cy="140" r="0.8" fill="%23ffd700" opacity="0.7"/><circle cx="110" cy="130" r="0.6" fill="%2300aaff" opacity="0.6"/></svg>');
-            background-size: 120px 120px;
-            opacity: 0.9;
             z-index: 1;
+        }
+
+        .star {
+            position: absolute;
+            background: white;
+            border-radius: 50%;
+            opacity: 0;
+            animation: twinkle var(--duration) infinite ease-in-out;
+        }
+
+        @keyframes twinkle {
+            0%, 100% { opacity: 0; transform: scale(0.5); }
+            50% { opacity: var(--max-opacity); transform: scale(1.2); }
+        }
+
+        /* שכבת "אבק כוכבים" למילוי העומק */
+        .glitter-overlay {
+            position: absolute;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="200" height="200"><circle cx="50" cy="50" r="0.5" fill="white" opacity="0.3"/><circle cx="150" cy="150" r="0.7" fill="%23ffd700" opacity="0.4"/></svg>');
+            background-size: 250px 250px;
+            z-index: 2;
+            opacity: 0.5;
         }
 
         .arrow-container {
             height: 75vh;
             width: auto;
             display: none;
-            /* הילה נקייה בצבע החץ */
-            filter: drop-shadow(0 0 40px currentColor);
+            filter: drop-shadow(0 0 50px currentColor);
             z-index: 10;
             position: relative;
         }
@@ -48,18 +66,19 @@
 
         .visible {
             display: block;
-            animation: fadeIn 0.1s ease-out;
+            animation: fadeIn 0.15s ease-out;
         }
 
         @keyframes fadeIn {
-            from { opacity: 0; transform: scale(0.95); }
+            from { opacity: 0; transform: scale(0.9); }
             to { opacity: 1; transform: scale(1); }
         }
     </style>
 </head>
 <body oncontextmenu="return false;">
 
-    <div class="glitter-layer"></div>
+    <div class="glitter-overlay"></div>
+    <div id="stars" class="stars-container"></div>
 
     <svg style="width:0; height:0; position:absolute;">
         <defs>
@@ -83,6 +102,35 @@
     </svg>
 
     <script>
+        // יצירת 150 נצנצים במיקומים רנדומליים עם זמני אנימציה שונים
+        const starsContainer = document.getElementById('stars');
+        const colors = ['#ffffff', '#ffd700', '#00aaff', '#ffec8b'];
+
+        for (let i = 0; i < 150; i++) {
+            const star = document.createElement('div');
+            star.className = 'star';
+            
+            const size = Math.random() * 3 + 1;
+            const x = Math.random() * 100;
+            const y = Math.random() * 100;
+            const duration = Math.random() * 3 + 2;
+            const delay = Math.random() * 5;
+            const opacity = Math.random() * 0.7 + 0.3;
+            const color = colors[Math.floor(Math.random() * colors.length)];
+
+            star.style.width = `${size}px`;
+            star.style.height = `${size}px`;
+            star.style.left = `${x}%`;
+            star.style.top = `${y}%`;
+            star.style.backgroundColor = color;
+            star.style.boxShadow = `0 0 ${size * 2}px ${color}`;
+            star.style.setProperty('--duration', `${duration}s`);
+            star.style.setProperty('--max-opacity', opacity);
+            star.style.animationDelay = `${delay}s`;
+
+            starsContainer.appendChild(star);
+        }
+
         const blueArrow = document.getElementById('blueArrow');
         const redArrow = document.getElementById('redArrow');
 
