--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Next Star - Live Control</title>
+    
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/eladwino123-ship-it/the-next-star-final/main/logo.png">
+
     <style>
         body, html {
             margin: 0; padding: 0; width: 100%; height: 100%;
@@ -13,15 +16,31 @@
             cursor: none; user-select: none;
         }
         canvas { position: absolute; top: 0; left: 0; z-index: 1; }
+        
         .arrow-container {
             height: 75vh; width: auto; display: none;
-            filter: drop-shadow(0 0 50px currentColor);
             z-index: 10; position: relative;
+            filter: drop-shadow(0 0 30px currentColor);
         }
+
         .blue-glow { color: #0099ff; }
         .red-glow { color: #ff0000; }
-        .visible { display: block; animation: fadeIn 0.15s ease-out; }
-        @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
+
+        /* אפקט הפלש והפעימה של התוכנית */
+        .visible { 
+            display: block; 
+            animation: startFlash 0.2s ease-out, pulseGlow 1.5s infinite ease-in-out 0.2s; 
+        }
+
+        @keyframes startFlash {
+            0% { opacity: 0; transform: scale(0.8); filter: drop-shadow(0 0 100px currentColor) brightness(3); }
+            100% { opacity: 1; transform: scale(1); filter: drop-shadow(0 0 40px currentColor) brightness(1); }
+        }
+
+        @keyframes pulseGlow {
+            0%, 100% { filter: drop-shadow(0 0 30px currentColor) brightness(1); transform: scale(1); }
+            50% { filter: drop-shadow(0 0 60px currentColor) brightness(1.2); transform: scale(1.02); }
+        }
     </style>
 </head>
 <body>
@@ -48,15 +67,11 @@
     </svg>
 
     <script>
-        // --- מנוע הנצנצים השוחים ---
+        // מנוע נצנצים שוחים
         const canvas = document.getElementById('glitterCanvas');
         const ctx = canvas.getContext('2d');
         let particles = [];
-
-        function resize() {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-        }
+        function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
         window.addEventListener('resize', resize);
         resize();
 
@@ -66,30 +81,22 @@
                 this.x = Math.random() * canvas.width;
                 this.y = Math.random() * canvas.height;
                 this.size = Math.random() * 3 + 1;
-                this.vx = (Math.random() - 0.5) * 1.8; // מהירות שחייה מורגשת
+                this.vx = (Math.random() - 0.5) * 1.8;
                 this.vy = (Math.random() - 0.5) * 1.8;
                 this.opacity = Math.random();
                 this.color = ['#ffffff', '#ffd700', '#00aaff'][Math.floor(Math.random() * 3)];
             }
             update() {
-                this.x += this.vx;
-                this.y += this.vy;
-                if (this.x < 0) this.x = canvas.width;
-                if (this.x > canvas.width) this.x = 0;
-                if (this.y < 0) this.y = canvas.height;
-                if (this.y > canvas.height) this.y = 0;
+                this.x += this.vx; this.y += this.vy;
+                if (this.x < 0) this.x = canvas.width; if (this.x > canvas.width) this.x = 0;
+                if (this.y < 0) this.y = canvas.height; if (this.y > canvas.height) this.y = 0;
             }
             draw() {
-                ctx.globalAlpha = this.opacity;
-                ctx.fillStyle = this.color;
-                ctx.beginPath();
-                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-                ctx.fill();
+                ctx.globalAlpha = this.opacity; ctx.fillStyle = this.color;
+                ctx.beginPath(); ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2); ctx.fill();
             }
         }
-
         for (let i = 0; i < 150; i++) particles.push(new Particle());
-
         function loop() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             particles.forEach(p => { p.update(); p.draw(); });
@@ -97,7 +104,6 @@
         }
         loop();
 
-        // --- לוגיקת החצים (כולל ביטול בלחיצה חוזרת) ---
         const blueArrow = document.getElementById('blueArrow');
         const redArrow = document.getElementById('redArrow');
 
@@ -107,21 +113,13 @@
         }
 
         function toggleBlue() {
-            if (blueArrow.classList.contains('visible')) {
-                reset();
-            } else {
-                reset();
-                blueArrow.classList.add('visible');
-            }
+            if (blueArrow.classList.contains('visible')) reset();
+            else { reset(); blueArrow.classList.add('visible'); }
         }
 
         function toggleRed() {
-            if (redArrow.classList.contains('visible')) {
-                reset();
-            } else {
-                reset();
-                redArrow.classList.add('visible');
-            }
+            if (redArrow.classList.contains('visible')) reset();
+            else { reset(); redArrow.classList.add('visible'); }
         }
 
         document.addEventListener('keydown', (e) => {
@@ -131,8 +129,8 @@
         });
 
         document.addEventListener('mousedown', (e) => {
-            if (e.button === 0) toggleBlue(); // קליק שמאלי
-            if (e.button === 2) toggleRed();  // קליק ימני
+            if (e.button === 0) toggleBlue();
+            if (e.button === 2) toggleRed();
         });
 
         document.oncontextmenu = (e) => e.preventDefault();
